--- a/sbapp/Makefile
+++ b/sbapp/Makefile
@@ -27,8 +27,11 @@ apk: prepare release postbuild
 
 devapk: prepare debug postbuild
 
+version:
+	@(echo $$(python ./gv.py))
+
 install:
-	adb install bin/sideband-0.1.7-arm64-v8a-release.apk
+	adb install bin/sideband-$$(python ./gv.py)-arm64-v8a-release.apk
 
 console:
 	(adb logcat | grep python)
