--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@ sbapp/dist
 sbapp/docs/build
 sbapp/sideband*.egg-info
 sbapp/sbapp*.egg-info
-
+sbapp/share/mirrors/*
+sbapp/share/pkg/*
 
 .buildozer*
 requirements.txt
