Updated repository contents

--- a/sbapp/Makefile
+++ b/sbapp/Makefile
@@ -56,6 +56,8 @@ else
 endif
 
 fetchshare:
+	rm ./share/pkg/*
+	rm ./share/mirrors/* -r
 	cp ../../dist_archive/rns-*-py3-none-any.whl ./share/pkg/
 	cp ../../dist_archive/rnspure-*-py3-none-any.whl ./share/pkg/
 	cp ../../dist_archive/lxmf-*-py3-none-any.whl ./share/pkg/
@@ -63,6 +65,7 @@ fetchshare:
 	cp ../../dist_archive/rnsh-*-py3-none-any.whl ./share/pkg/
 	cp ../../dist_archive/RNode_Firmware_*_Source.zip ./share/pkg/
 	cp -r ../../dist_archive/reticulum.network ./share/mirrors/
+	cp -r ../../dist_archive/unsigned.io ./share/mirrors/
 	cp ../../dist_archive/Reticulum\ Manual.pdf ./share/mirrors/Reticulum_Manual.pdf
 	cp ../../dist_archive/Reticulum\ Manual.epub ./share/mirrors/Reticulum_Manual.epub
 
