Updated build spec

--- a/sbapp/Makefile
+++ b/sbapp/Makefile
@@ -64,7 +64,7 @@ fetchshare:
 	cp ../../dist_archive/lxmf-*-py3-none-any.whl ./share/pkg/
 	cp ../../dist_archive/nomadnet-*-py3-none-any.whl ./share/pkg/
 	cp ../../dist_archive/rnsh-*-py3-none-any.whl ./share/pkg/
-	cp ../../dist_archive/sbapp-*-py3-none-any.whl ./share/pkg/
+# 	cp ../../dist_archive/sbapp-*-py3-none-any.whl ./share/pkg/
 	cp ../../dist_archive/RNode_Firmware_*_Source.zip ./share/pkg/
 	zip --junk-paths ./share/pkg/example_plugins.zip ../docs/example_plugins/*.py
 	cp -r ../../dist_archive/reticulum.network ./share/mirrors/
