Fixed desktop category

--- a/sbapp/assets/io.unsigned.sideband.desktop
+++ b/sbapp/assets/io.unsigned.sideband.desktop
@@ -6,7 +6,7 @@ Exec=sideband
 GenericName[en_US]=LXMF messaging, telemetry and remote control
 GenericName=LXMF messaging, telemetry and remote control
 Icon=io.unsigned.sideband.png
-Categories=InstantMessaging,Network
+Categories=Utility
 MimeType=
 Name[en_US]=Sideband
 Name=Sideband
