Don't fail on nonexistent directories

--- a/sbapp/Makefile
+++ b/sbapp/Makefile
@@ -90,9 +90,11 @@ console:
 	(adb logcat | grep "python\|sidebandservice")
 
 getrns:
-	(cp -rv ../../Reticulum/RNS ./;rm ./RNS/Utilities/RNS)
+	(cp -rv ../../Reticulum/RNS ./)
+	-(rm ./RNS/Utilities/RNS)
 	-(rm ./RNS/__pycache__ -r)
-	(cp -rv ../../LXMF/LXMF ./;rm ./LXMF/Utilities/LXMF)
+	(cp -rv ../../LXMF/LXMF ./)
+	-(rm ./LXMF/Utilities/LXMF)
 	-(rm ./LXMF/__pycache__ -r)
 
 cleanrns:
