Commit working progress thus far
Ubuntu documentation

docker attempt

perfect 4-architecture building

dist_archive building

Test GitHub actions

Test GitHub actions

Test GitHub actions

Test GitHub actions

Test GitHub actions

Test GitHub actions

Test GitHub actions

properly implemented caching

--- a/sbapp/Makefile
+++ b/sbapp/Makefile
@@ -15,7 +15,7 @@ cleanlibs:
 	
 cleanall: clean cleanlibs
 
-pacthfiles: patchsdl injectxml patchpycodec2
+patchfiles: patchsdl injectxml patchpycodec2
 
 patchsdl:
 	# Pach USB HID behaviour
@@ -35,10 +35,7 @@ patchpycodec2:
 injectxml:
 	# mkdir /home/markqvist/.local/lib/python3.11/site-packages/pythonforandroid/bootstraps/sdl2/build/src/main/xml
 	# Inject XML on arm64-v8a
-	mkdir -p .buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists/sideband/src/main/res/xml
 	mkdir -p .buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists/sideband/templates
-	cp patches/device_filter.xml .buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists/sideband/src/main/res/xml/
-	cp patches/file_paths.xml .buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists/sideband/src/main/res/xml/
 	cp patches/AndroidManifest.tmpl.xml .buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists/sideband/templates/
 	cp patches/p4a_build.py .buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists/sideband/build.py
 	
@@ -51,26 +48,95 @@ ifneq (,$(wildcard .buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists
 else
 	@(echo Prebaking build before patching files...)
 	@(sleep 2)
-	-(buildozer android release)
+	(buildozer android release)  # this mustn't be ignored, or else the release will indubitably fail
 	@(echo Prebake finished, applying patches and rebuilding...)
 	@(sleep 2)
 endif
 
+createshare:
+	# NOTICE: if the git refs of each repository here are not pinned, the build will NOT be deterministic!
+	mkdir -p ../../dist_archive
+	rm -vrf ../../dist_archive/*
+	# mirrors
+	# reticulum.network
+	cp -fv ../../reticulum_website/docs/manual/Reticulum\ Manual.pdf ../../dist_archive
+	cp -fv ../../reticulum_website/docs/manual/Reticulum\ Manual.epub ../../dist_archive
+	-(rm -rf ../../dist_archive/reticulum.network)
+	cp -frv ../../reticulum_website/docs ../../dist_archive/reticulum.network
+	# unsigned.io (mirror from https://git.liberatedsystems.co.uk/jacob.eva/openCom-Companion/src/branch/master/Dockerfile)
+	$(eval cwd := $(shell pwd))
+	cd ../../dist_archive && \
+	rm -rf ./unsigned.io && \
+	wget -q https://liberatedsystems.co.uk/unsigned_io_archive.zip && \
+	unzip -q unsigned_io_archive.zip && \
+	rm unsigned_io_archive.zip  && \
+	cd $(cwd)
+	# build wheels
+	# rns, rnspure, lxmf, lxst, nomadnet, rnsh
+	$(eval cwd := $(shell pwd))
+	cd ../../Reticulum && \
+	rm -rf ./dist && \
+	python3 ./setup.py bdist_wheel && \
+	cp -fv ./dist/* ../dist_archive && \
+	cd $(cwd)
+	
+	$(eval cwd := $(shell pwd))
+	cd ../../Reticulum && \
+	rm -rf ./dist && \
+	python3 ./setup.py bdist_wheel --pure && \
+	cp -fv ./dist/* ../dist_archive && \
+	cd $(cwd)
+	
+	$(eval cwd := $(shell pwd))
+	cd ../../LXMF && \
+	rm -rf ./dist && \
+	python3 ./setup.py bdist_wheel && \
+	cp -fv ./dist/* ../dist_archive && \
+	cd $(cwd)
+	
+	$(eval cwd := $(shell pwd))
+	cd ../../LXST && \
+	rm -rf ./dist && \
+	python3 ./setup.py bdist_wheel && \
+	cp -fv ./dist/* ../dist_archive && \
+	cd $(cwd)
+	
+	$(eval cwd := $(shell pwd))
+	cd ../../nomadnet && \
+	rm -rf ./dist && \
+	python3 ./setup.py bdist_wheel && \
+	cp -fv ./dist/* ../dist_archive && \
+	cd $(cwd)
+	
+	$(eval cwd := $(shell pwd))
+	cd ../../rnsh && \
+	rm -rf ./dist && \
+	poetry build && \
+	cp -fv ./dist/* ../dist_archive && \
+	cd $(cwd)
+	# rnode firmware source zip
+	cd ../../dist_archive && \
+	curl -L https://github.com/markqvist/RNode_Firmware/archive/refs/heads/master.zip --clobber -o RNode_Firmware-master.zip && \
+	cd $(cwd)
+
 fetchshare:
+	mkdir -p ./share/pkg
 	-(rm ./share/pkg/*)
+	mkdir -p ./share/mirrors
 	-(rm ./share/mirrors/* -r)
-	cp ../../dist_archive/rns-*-py3-none-any.whl ./share/pkg/
-	cp ../../dist_archive/rnspure-*-py3-none-any.whl ./share/pkg/
-	cp ../../dist_archive/lxmf-*-py3-none-any.whl ./share/pkg/
-	cp ../../dist_archive/nomadnet-*-py3-none-any.whl ./share/pkg/
-	cp ../../dist_archive/rnsh-*-py3-none-any.whl ./share/pkg/
-	cp ../../dist_archive/RNode_Firmware_*_Source.zip ./share/pkg/
+	cp -fv ../../dist_archive/rns-*-py3-none-any.whl ./share/pkg/
+	cp -fv ../../dist_archive/rnspure-*-py3-none-any.whl ./share/pkg/
+	cp -fv ../../dist_archive/lxmf-*-py3-none-any.whl ./share/pkg/
+	cp -fv ../../dist_archive/lxst-*-py3-none-any.whl ./share/pkg/
+	cp -fv ../../dist_archive/nomadnet-*-py3-none-any.whl ./share/pkg/
+	cp -fv ../../dist_archive/rnsh-*-py3-none-any.whl ./share/pkg/
+	cp -fv ../../dist_archive/RNode_Firmware-*.zip ./share/pkg/
 	zip --junk-paths ./share/pkg/example_plugins.zip ../docs/example_plugins/*.py
-	cp -r ../../dist_archive/reticulum.network ./share/mirrors/
-	cp -r ../../dist_archive/unsigned.io ./share/mirrors/
-	cp ../../dist_archive/Reticulum\ Manual.pdf ./share/mirrors/Reticulum_Manual.pdf
-	cp ../../dist_archive/Reticulum\ Manual.epub ./share/mirrors/Reticulum_Manual.epub
-	cp -r ../../rnode-flasher ./share/mirrors/
+	cp -rfv ../../dist_archive/reticulum.network ./share/mirrors/
+	cp -rfv ../../dist_archive/unsigned.io ./share/mirrors/
+	cp -fv ../../dist_archive/Reticulum\ Manual.pdf ./share/mirrors/Reticulum_Manual.pdf
+	cp -fv ../../dist_archive/Reticulum\ Manual.epub ./share/mirrors/Reticulum_Manual.epub
+	cp -rfv ../../rnode-flasher ./share/mirrors/
 	-(rm ./share/mirrors/rnode-flasher/.git -rf)
 
 release:
@@ -79,25 +145,37 @@ release:
 postbuild:
 	$(MAKE) cleanrns
 
-apk: prepare prebake pacthfiles fetchshare release postbuild
+apk: clean prepare prebake patchfiles createshare fetchshare release postbuild
 
-devapk: prepare prebake pacthfiles fetchshare debug postbuild
+devapk: clean prepare prebake patchfiles debug postbuild
 
 version:
 	@(echo $$(python ./gv.py))
 
 install:
-	adb install bin/sideband-$$(python ./gv.py)-arm64-v8a_armeabi-v7a-release.apk
+	adb install -r bin/sideband-$$(python ./gv.py)-arm64-v8a_armeabi-v7a_x86_x86_64-release.apk
+
+devinstall:
+	adb install -r bin/sideband-$$(python ./gv.py)-arm64-v8a_armeabi-v7a_x86_x86_64-debug.apk
+
+install-multi:
+	adb devices | tail -n +2 | cut -sf 1 | xargs -iX adb -s X install -r ./bin/sideband-$$(python ./gv.py)-arm64-v8a_armeabi-v7a_x86_x86_64-release.apk
+
+devinstall-multi:
+	adb devices | tail -n +2 | cut -sf 1 | xargs -iX adb -s X install -r ./bin/sideband-$$(python ./gv.py)-arm64-v8a_armeabi-v7a_x86_x86_64-debug.apk
 
 console:
 	(adb logcat | grep "python\|sidebandservice")
 
 getrns:
-	(cp -rv ../../Reticulum/RNS ./;rm ./RNS/Utilities/RNS)
+	(cp -rv ../../Reticulum/RNS ./)
+	-(rm ./RNS/Utilities/RNS) # created by the create_symlinks target in Reticulum
 	-(rm ./RNS/__pycache__ -r)
-	(cp -rv ../../LXMF/LXMF ./;rm ./LXMF/Utilities/LXMF)
+	(cp -rv ../../LXMF/LXMF ./)
+	-(rm ./LXMF/Utilities/LXMF) # ditto
 	-(rm ./LXMF/__pycache__ -r)
-	(cp -rv ../../LXST/LXST ./;rm ./LXST/Utilities/LXST)
+	(cp -rv ../../LXST/LXST ./)
+	-(rm ./LXST/Utilities/LXST)
 	-(rm ./LXST/__pycache__ -r)
 	-(rm ./LXST/Utilities/__pycache__ -r)
 
