Added full RNS status button on Android

--- a/sbapp/Makefile
+++ b/sbapp/Makefile
@@ -97,6 +97,9 @@ getrns:
 	-(rm ./RNS/__pycache__ -r)
 	(cp -rv ../../LXMF/LXMF ./;rm ./LXMF/Utilities/LXMF)
 	-(rm ./LXMF/__pycache__ -r)
+	(cp -rv ../../LXST/LXST ./;rm ./LXST/Utilities/LXST)
+	-(rm ./LXST/__pycache__ -r)
+	-(rm ./LXST/Utilities/__pycache__ -r)
 
 cleanrns:
 	-(rm ./RNS -r)
