--- a/sbapp/Makefile
+++ b/sbapp/Makefile
@@ -93,11 +93,14 @@ console:
 	(adb logcat | grep "python\|sidebandservice")
 
 getrns:
-	(cp -rv ../../Reticulum/RNS ./;rm ./RNS/Utilities/RNS)
+	(cp -r ../../Reticulum/RNS ./)
+	-(rm ./RNS/Utilities/RNS)
 	-(rm ./RNS/__pycache__ -r)
-	(cp -rv ../../LXMF/LXMF ./;rm ./LXMF/Utilities/LXMF)
+	(cp -r ../../LXMF/LXMF ./)
+	-(rm ./LXMF/Utilities/LXMF)
 	-(rm ./LXMF/__pycache__ -r)
-	(cp -rv ../../LXST/LXST ./;rm ./LXST/Utilities/LXST)
+	(cp -r ../../LXST/LXST ./)
+	-(rm ./LXST/Utilities/LXST)
 	-(rm ./LXST/__pycache__ -r)
 	-(rm ./LXST/Utilities/__pycache__ -r)
 
