--- a/sbapp/Makefile
+++ b/sbapp/Makefile
@@ -64,11 +64,11 @@ endif
 fetchshare:
 	-(rm ./share/pkg/*)
 	-(rm ./share/mirrors/* -r)
-	cp ../../dist_archive/rns-*-py3-none-any.whl ./share/pkg/
-	cp ../../dist_archive/rnspure-*-py3-none-any.whl ./share/pkg/
-	cp ../../dist_archive/lxmf-*-py3-none-any.whl ./share/pkg/
-	cp ../../dist_archive/nomadnet-*-py3-none-any.whl ./share/pkg/
-	cp ../../dist_archive/rnsh-*-py3-none-any.whl ./share/pkg/
+	cp ../../dist_archive/rns-1.0.1-py3-none-any.whl ./share/pkg/
+	cp ../../dist_archive/rnspure-1.0.1-py3-none-any.whl ./share/pkg/
+	cp ../../dist_archive/lxmf-0.9.0-py3-none-any.whl ./share/pkg/
+	cp ../../dist_archive/nomadnet-0.9.0-py3-none-any.whl ./share/pkg/
+	cp ../../dist_archive/rnsh-0.1.7-py3-none-any.whl ./share/pkg/
 	cp ../../dist_archive/RNode_Firmware_*_Source.zip ./share/pkg/
 	zip --junk-paths ./share/pkg/example_plugins.zip ../docs/example_plugins/*.py
 	cp -r ../../dist_archive/reticulum.network ./share/mirrors/
